compiler/hachi-tests/tests/snapshots/ui_tests__compiler_ui_tests@sema__invalid_let_binding.test.snap
---
source: compiler/hachi-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/sema/invalid_let_binding.test
input_file: compiler/hachi-tests/tests/ui/sema/invalid_let_binding.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::invalid_reference

  × invalid reference to undefined
   ╭─[tests/ui/sema/invalid_let_binding.test:2:11]
 1 │ fn foo() {
 2 │   let k = undefined;
   ·           ────┬────
   ·               ╰── no value in scope named undefined
 3 │ }
   ╰────
